k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storetrack
  labels:
    app.kubernetes.io/name: storetrack
